# openlumara

./: .gitignore  .module_cache.json  .swp  README.md  config_snippet.yaml  globals.py  main.py  pyproject.toml  requirements.txt  requirements_coder.txt  requirements_matrix.txt  run.bat  run.sh  run_dev.sh  run_termux.sh  test_commonprefix.py  test_render.py  test_ts_imports.py  update.bat  update.sh  webui_api_docs.md  webui_rewrite_plan.md
channels/: api_bridge.py  chan_api_bridge.py  chan_discord.py  chan_web.py  chan_webui.py  channel.py.example  cli.py  cli_lite.py  cli_markdown.py  cli_multimodal.py  discord.py  discord_bot.py  matrix.py  simple_webui.py  telegram.py  turn_grouping_test.py  turnstest.py  webui.py  webui_rewrite.py
core/: __init__.py  api.py  api_client.py  channel.py  chat.py  commands - Copy.py  commands.py  config.py  context.py  exceptions.py  functions.py  manager.py  memory.py  messages.py  module.py  modules.py  storage.py  toolcalls - Copy.py  toolcalls.py  turns.py
dev_modules_unsafe_dont_touch_highly_volatile/: files.py
modules/: __init__.py  agent_framework_awareness.py  calculator.py  calendar.py  channel.py  character.py  characters.py  chats.py  coder.py  config.py  context.py  daily_todo.py  docker_python_eval.py  docker_shell.py  file_manager.py  files.py  files_sandbox.py  files_sandboxed.py  files_unsandboxed.py  http.py  identity.py  lists.py  memory.py  model.py  models.py  module_maker.py  module_manager.py  modulemaker.py  modules.py  notes.py  openlumara_prompt.py  opticlaw_manual.py  presets.py  safe_eval.py  (+19 more)
(+279 files in other folders)
